--- a/Sagemaker.ipynb
+++ b/Sagemaker.ipynb
@@ -67,7 +67,7 @@
     "model_name = \"autoaimodel-v6\"\n",
     "response = sagemaker_client.create_model(\n",
     "    ModelName=model_name,\n",
-    "    ExecutionRoleArn=\"arn:aws:iam::217560530765:role/service-role/AmazonSageMaker-ExecutionRole-20231024T083672\",\n",
+    "    ExecutionRoleArn=\"sasa\",\n",
     "    PrimaryContainer=container\n",
     ")\n",
     "\n",
